--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,45 +1,120 @@
+<app-modal></app-modal>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Ejercicio</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Ejercicio</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            aria-current="page"
+            routerLinkActive="active"
+            routerLink="/home"
+            >Home</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" routerLink="/directivas"
+            >Directivas</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            routerLinkActive="active"
+            [routerLink]="['temario']"
+            >Temario</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" [routerLink]="['pipes']"
+            >Pipes</a
+          >
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            id="navbarDropdown"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Formularios
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li>
+              <a class="dropdown-item" [routerLink]="['fortemplate']"
+                >En el Html</a
+              >
+            </li>
+            <li>
+              <a class="dropdown-item" [routerLink]="['forts']">En el TS</a>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            routerLinkActive="active"
+            [routerLink]="['registro']"
+            >Registro</a
+          >
+        </li>
+
+        <li class="nav-item">
+          <a
+            class="nav-link disabled"
+            href="#"
+            tabindex="-1"
+            aria-disabled="true"
+            >Disabled</a
+          >
+        </li>
+      </ul>
+
+      <span class="navbar-text mx-3">
+        <app-datos-usuario></app-datos-usuario>
+      </span>
+      <button
+        *ngIf="!usuarioService.autenticado"
+        class="btn btn-outline-success btn-sm"
+        data-bs-toggle="modal"
+        [disabled]="usuarioService.haciandoLoginLogout"
+        data-bs-target="#exampleModal"
+      >
+        <i
+          [ngClass]="{
+            'fas fa-spinner fa-spin': usuarioService.haciandoLoginLogout
+          }"
+        ></i>
+        Entrar
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item" >
-            <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="/home">Home</a>
-          </li>
-          <li class="nav-item" >
-            <a class="nav-link" routerLinkActive="active" routerLink="/directivas">Directivas</a>
-          </li>
-          <li class="nav-item" >
-            <a class="nav-link" routerLinkActive="active" [routerLink]="['temario']">Temario</a>
-          </li>
-          <li class="nav-item" >
-            <a class="nav-link" routerLinkActive="active" [routerLink]="['pipes']">Pipes</a>
-          </li>
-          <li class="nav-item" >
-            <a class="nav-link" routerLinkActive="active" [routerLink]="['registro']">Registro</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
+
+      <button
+        *ngIf="usuarioService.autenticado"
+        class="btn btn-outline-success btn-sm"
+        [disabled]="usuarioService.haciandoLoginLogout"
+        (click)="usuarioService.logout()"
+      >
+        <i
+          [ngClass]="{
+            'fas fa-spinner fa-spin': usuarioService.haciandoLoginLogout
+          }"
+        ></i>
+        Salir
+      </button>
     </div>
-  </nav>
+  </div>
+</nav>
