--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -73,6 +73,29 @@
           >
         </li>
 
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            id="navbarDropdown"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Vehiculos
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li>
+              <a class="dropdown-item" [routerLink]="['tiposvehiculos']"
+                >Tipos</a
+              >
+            </li>
+            <li>
+              <a class="dropdown-item" [routerLink]="['clientes']">Clientes</a>
+            </li>
+          </ul>
+        </li>
+
         <li class="nav-item">
           <a
             class="nav-link disabled"
