--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -95,6 +95,14 @@
             </li>
           </ul>
         </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            routerLinkActive="active"
+            [routerLink]="['material']"
+            >Material</a
+          >
+        </li>
 
         <li class="nav-item">
           <a
