--- a/src/app/pages/formularios/formulario-html/formulario-html.component.html
+++ b/src/app/pages/formularios/formulario-html/formulario-html.component.html
@@ -2,7 +2,7 @@
   <div class="row mt-3">
     <div class="col-md-12">
       <div class="card">
-        <div class="card-header">Formularios en HTML</div>
+        <div class="card-header">Formularios en HTML - Template</div>
       <div class="card-body">
         <form
           class="needs-validation"
