--- a/src/app/components/datos-usuario/datos-usuario.component.html
+++ b/src/app/components/datos-usuario/datos-usuario.component.html
@@ -1,1 +1,5 @@
-{{ usuarioService.usuario.nombre || '' }}
+<div class="navbar" style="color: #e3f2fd;" href="#">
+      {{ usuarioService.usuario.nombre || '' }}
+</div>
+
+
