Poniendo app en español

--- a/src/app/pages/pipes/pipes.component.html
+++ b/src/app/pages/pipes/pipes.component.html
@@ -56,6 +56,12 @@
                   <td>{{ fecha | date: "medium" }}</td>
                 </tr>
                 <tr>
+                  <td>Fecha</td>
+                  <td>{{ fecha }}</td>
+                  <td>fecha | date:'full'</td>
+                  <td>{{ fecha | date:'full':'':'es' }}</td>
+                </tr>
+                <tr>
                   <td>Personalizado - Al revés</td>
                   <td>{{ cadenaTexto }}</td>
                   <td>cadenaTexto | alreves</td>
